# python-template

./: .gitignore  README.md  lint.py  openapi.py  pyproject.toml  requirements.py
script/: test.py
scripts/: __init__.py  lint.py  openapi.py  requirements.py  start.py  test.py  type.py
